--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -90,7 +90,6 @@
     "/chunks/manager_login.bundle.js": "/chunks/manager_login.bundle.js",
     "/chunks/manager_password_edit.bundle.js": "/chunks/manager_password_edit.bundle.js",
     "/chunks/manager_password_reset.bundle.js": "/chunks/manager_password_reset.bundle.js",
-    "/chunks/manager_product_manage.bundle.js": "/chunks/manager_product_manage.bundle.js",
     "/chunks/manager_profile.bundle.js": "/chunks/manager_profile.bundle.js",
     "/chunks/manager_profile_edit.bundle.js": "/chunks/manager_profile_edit.bundle.js",
     "/chunks/newOrder.bundle.js": "/chunks/newOrder.bundle.js",
@@ -130,6 +129,7 @@
     "/chunks/selling_offer.bundle.js": "/chunks/selling_offer.bundle.js",
     "/chunks/shipmentOrder.bundle.js": "/chunks/shipmentOrder.bundle.js",
     "/chunks/show_carrier.bundle.js": "/chunks/show_carrier.bundle.js",
+    "/chunks/showroom_products.bundle.js": "/chunks/showroom_products.bundle.js",
     "/chunks/showroom_sale.bundle.js": "/chunks/showroom_sale.bundle.js",
     "/chunks/showroom_sale_add.bundle.js": "/chunks/showroom_sale_add.bundle.js",
     "/chunks/showroom_sale_view.bundle.js": "/chunks/showroom_sale_view.bundle.js",
@@ -157,13 +157,14 @@
     "/chunks/user_password_reset.bundle.js": "/chunks/user_password_reset.bundle.js",
     "/chunks/variaantAdd.bundle.js": "/chunks/variaantAdd.bundle.js",
     "/chunks/variant.bundle.js": "/chunks/variant.bundle.js",
-    "/chunks/vendors~AccountReport~AddSaleExchange~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~about_and_~cf0d8a39.bundle.js": "/chunks/vendors~AccountReport~AddSaleExchange~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~about_and_~cf0d8a39.bundle.js",
+    "/chunks/vendors~AccountReport~AddSaleExchange~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~about_and_~e093604a.bundle.js": "/chunks/vendors~AccountReport~AddSaleExchange~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~about_and_~e093604a.bundle.js",
     "/chunks/vendors~AccountReport~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~admin_dashboard~approvedOr~ee85355f.bundle.js": "/chunks/vendors~AccountReport~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~admin_dashboard~approvedOr~ee85355f.bundle.js",
     "/chunks/vendors~about_and_contact~add_carrier~edit_carrier~footer_setting~generl setting~order_shipment_retu~74b625a3.bundle.js": "/chunks/vendors~about_and_contact~add_carrier~edit_carrier~footer_setting~generl setting~order_shipment_retu~74b625a3.bundle.js",
     "/chunks/vendors~addOrder~addwholesale~admin_login~manager_code_verified~new_password_manager~showroom_sale_add.bundle.js": "/chunks/vendors~addOrder~addwholesale~admin_login~manager_code_verified~new_password_manager~showroom_sale_add.bundle.js",
     "/chunks/vendors~debitAdd.bundle.js": "/chunks/vendors~debitAdd.bundle.js",
-    "/chunks/vendors~manager_product_manage~product.bundle.js": "/chunks/vendors~manager_product_manage~product.bundle.js",
+    "/chunks/vendors~product~showroom_products.bundle.js": "/chunks/vendors~product~showroom_products.bundle.js",
     "/chunks/viewOrder.bundle.js": "/chunks/viewOrder.bundle.js",
     "/chunks/viewSale.bundle.js": "/chunks/viewSale.bundle.js",
-    "/chunks/wholesaleOrder.bundle.js": "/chunks/wholesaleOrder.bundle.js"
+    "/chunks/wholesaleOrder.bundle.js": "/chunks/wholesaleOrder.bundle.js",
+    "/chunks/vendors~AccountReport~AddSaleExchange~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~about_and_~91fffb93.bundle.js": "/chunks/vendors~AccountReport~AddSaleExchange~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~about_and_~91fffb93.bundle.js"
 }
