--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -129,6 +129,13 @@
     "/chunks/selling_offer.bundle.js": "/chunks/selling_offer.bundle.js",
     "/chunks/shipmentOrder.bundle.js": "/chunks/shipmentOrder.bundle.js",
     "/chunks/show_carrier.bundle.js": "/chunks/show_carrier.bundle.js",
+    "/chunks/showroom_credit.bundle.js": "/chunks/showroom_credit.bundle.js",
+    "/chunks/showroom_credit_add.bundle.js": "/chunks/showroom_credit_add.bundle.js",
+    "/chunks/showroom_credit_edit.bundle.js": "/chunks/showroom_credit_edit.bundle.js",
+    "/chunks/showroom_debit.bundle.js": "/chunks/showroom_debit.bundle.js",
+    "/chunks/showroom_debit_add.bundle.js": "/chunks/showroom_debit_add.bundle.js",
+    "/chunks/showroom_debit_edit.bundle.js": "/chunks/showroom_debit_edit.bundle.js",
+    "/chunks/showroom_due.bundle.js": "/chunks/showroom_due.bundle.js",
     "/chunks/showroom_products.bundle.js": "/chunks/showroom_products.bundle.js",
     "/chunks/showroom_sale.bundle.js": "/chunks/showroom_sale.bundle.js",
     "/chunks/showroom_sale_add.bundle.js": "/chunks/showroom_sale_add.bundle.js",
@@ -157,7 +164,7 @@
     "/chunks/user_password_reset.bundle.js": "/chunks/user_password_reset.bundle.js",
     "/chunks/variaantAdd.bundle.js": "/chunks/variaantAdd.bundle.js",
     "/chunks/variant.bundle.js": "/chunks/variant.bundle.js",
-    "/chunks/vendors~AccountReport~AddSaleExchange~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~about_and_~e093604a.bundle.js": "/chunks/vendors~AccountReport~AddSaleExchange~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~about_and_~e093604a.bundle.js",
+    "/chunks/vendors~AccountReport~AddSaleExchange~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~about_and_~8409dfb6.bundle.js": "/chunks/vendors~AccountReport~AddSaleExchange~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~about_and_~8409dfb6.bundle.js",
     "/chunks/vendors~AccountReport~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~admin_dashboard~approvedOr~ee85355f.bundle.js": "/chunks/vendors~AccountReport~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~admin_dashboard~approvedOr~ee85355f.bundle.js",
     "/chunks/vendors~about_and_contact~add_carrier~edit_carrier~footer_setting~generl setting~order_shipment_retu~74b625a3.bundle.js": "/chunks/vendors~about_and_contact~add_carrier~edit_carrier~footer_setting~generl setting~order_shipment_retu~74b625a3.bundle.js",
     "/chunks/vendors~addOrder~addwholesale~admin_login~manager_code_verified~new_password_manager~showroom_sale_add.bundle.js": "/chunks/vendors~addOrder~addwholesale~admin_login~manager_code_verified~new_password_manager~showroom_sale_add.bundle.js",
@@ -165,6 +172,5 @@
     "/chunks/vendors~product~showroom_products.bundle.js": "/chunks/vendors~product~showroom_products.bundle.js",
     "/chunks/viewOrder.bundle.js": "/chunks/viewOrder.bundle.js",
     "/chunks/viewSale.bundle.js": "/chunks/viewSale.bundle.js",
-    "/chunks/wholesaleOrder.bundle.js": "/chunks/wholesaleOrder.bundle.js",
-    "/chunks/vendors~AccountReport~AddSaleExchange~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~about_and_~91fffb93.bundle.js": "/chunks/vendors~AccountReport~AddSaleExchange~DeliveredOrder~OrderProfite~ReturnOrder~SaleProfite~about_and_~91fffb93.bundle.js"
+    "/chunks/wholesaleOrder.bundle.js": "/chunks/wholesaleOrder.bundle.js"
 }
